Update `LiricalDifferentialDiagnosisEngineConfigurer`.